projects/lungmen.akn/dist/infrastructure/kubernetes/velero/apps.v1.DaemonSet.node-agent.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: velero
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: velero
    app.kubernetes.io/version: 1.18.1
    helm.sh/chart: velero-12.1.0
  name: node-agent
  namespace: velero-system
spec:
  selector:
    matchLabels:
      name: node-agent
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8085"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: velero
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: velero
        app.kubernetes.io/version: 1.18.1
        helm.sh/chart: velero-12.1.0
        name: node-agent
        role: node-agent
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - node-agent
        - server
        command:
        - /velero
        image: oci.chezmoi.sh/docker.io/velero/velero:v1.18.1
        imagePullPolicy: IfNotPresent
        name: node-agent
        ports:
        - containerPort: 8085
          name: http-monitoring
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext: null
        volumeMounts:
        - mountPath: /credentials
          name: cloud-credentials
        - mountPath: /host_pods
          mountPropagation: HostToContainer
          name: host-pods
        - mountPath: /host_plugins
          mountPropagation: HostToContainer
          name: host-plugins
        - mountPath: /scratch
          name: scratch
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
      serviceAccountName: velero-server
      terminationGracePeriodSeconds: 3600
      volumes:
      - name: cloud-credentials
        secret:
          secretName: velero-credentials
      - hostPath:
          path: /var/lib/kubelet/pods
        name: host-pods
      - hostPath:
          path: /var/lib/kubelet/plugins
        name: host-plugins
      - emptyDir: {}
        name: scratch
