projects/lungmen.akn/dist/infrastructure/kubernetes/velero/core.v1.Service.velero.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: velero
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: velero
    app.kubernetes.io/version: 1.18.1
    helm.sh/chart: velero-12.1.0
  name: velero
  namespace: velero-system
spec:
  ports:
  - name: http-monitoring
    port: 8085
    targetPort: http-monitoring
  selector:
    app.kubernetes.io/instance: velero
    app.kubernetes.io/name: velero
    name: velero
  type: ClusterIP
