projects/lungmen.akn/dist/infrastructure/kubernetes/velero/cilium.io.v2.CiliumNetworkPolicy.allow-to-kube-apiserver.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows all velero-system pods (controller + node-agent) to reach the Kubernetes API server.
      Required for watching/managing Backup, Restore, and PodVolumeBackup custom resources plus PVCs
      cluster-wide.
  name: allow-to-kube-apiserver
  namespace: velero-system
spec:
  egress:
  - toEntities:
    - kube-apiserver
  endpointSelector: {}
